Update mobile hero heading text

--- a/index.html
+++ b/index.html
@@ -3287,7 +3287,7 @@
                 <div class="hero-content">
                     <h1>
                         <span class="hero-title-desktop">Garden Maintenance Service</span>
-                        <span class="hero-title-mobile">Pay As You Mow</span>
+                        <span class="hero-title-mobile">Garden Maintenance</span>
                     </h1>
                     <p>Probably the best rates in Tameside.</p>
                     <div class="hero-actions">
@@ -3302,7 +3302,7 @@
                 <div class="hero-content">
                     <h1>
                         <span class="hero-title-desktop">Garden Maintenance Service</span>
-                        <span class="hero-title-mobile">Pay As You Mow</span>
+                        <span class="hero-title-mobile">Garden Maintenance</span>
                     </h1>
                     <p>Detailed border care, weeding, and mowing tailored to your garden.</p>
                     <div class="hero-actions">
