--- a/index.html
+++ b/index.html
@@ -2921,20 +2921,40 @@
 
             .logo-title {
                 font-size: 1.08em;
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 0;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                gap: 8px;
                 line-height: 1.08;
+                padding: 6px 14px;
+                border-radius: 999px;
+                background: linear-gradient(135deg, rgba(12, 53, 25, 0.45), rgba(12, 53, 25, 0.2));
+                border: 1px solid rgba(255, 255, 255, 0.16);
+                box-shadow: 0 18px 30px rgba(12, 53, 25, 0.28);
+                backdrop-filter: blur(8px);
+            }
+
+            .logo-title-text,
+            .logo-title .highlight {
+                display: inline-flex;
+                align-items: center;
+                padding: 4px 10px;
+                border-radius: 999px;
+                text-transform: uppercase;
+                letter-spacing: 0.08em;
+                font-weight: 600;
             }
 
             .logo-title-text {
-                letter-spacing: 0.04em;
+                color: rgba(255, 255, 255, 0.92);
+                background: linear-gradient(135deg, rgba(255, 255, 255, 0.22), rgba(255, 255, 255, 0.05));
+                box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.35);
             }
 
             .logo-title .highlight {
-                color: var(--secondary);
-                display: block;
-                margin-top: 2px;
+                color: #1b5e20;
+                background: linear-gradient(135deg, rgba(255, 224, 130, 0.95), rgba(255, 152, 0, 0.9));
+                box-shadow: 0 10px 22px rgba(255, 152, 0, 0.38);
             }
 
             .logo-title .highlight::after {
@@ -3040,11 +3060,14 @@
             }
 
             .logo-title {
-                font-size: 1.02em;
+                font-size: 1em;
+                padding: 5px 12px;
             }
 
-            .logo-title-text {
-                letter-spacing: 0.03em;
+            .logo-title-text,
+            .logo-title .highlight {
+                letter-spacing: 0.07em;
+                padding: 3px 9px;
             }
 
             .logo-tagline {
