--- a/index.html
+++ b/index.html
@@ -2919,46 +2919,87 @@
                 padding: 10px;
             }
 
+            .header-container {
+                gap: 24px;
+                padding: 18px 0;
+            }
+
+            .logo {
+                padding: 8px 16px;
+                border-radius: 18px;
+                background: linear-gradient(135deg, rgba(255, 255, 255, 0.12), rgba(255, 255, 255, 0.02));
+                box-shadow: 0 20px 36px rgba(12, 53, 25, 0.28);
+                position: relative;
+                overflow: hidden;
+                isolation: isolate;
+            }
+
+            .logo::before {
+                content: '';
+                position: absolute;
+                inset: 0;
+                background: linear-gradient(130deg, rgba(255, 255, 255, 0.18), rgba(255, 255, 255, 0));
+                opacity: 0.65;
+                pointer-events: none;
+                z-index: 0;
+            }
+
+            .logo-icon {
+                width: 50px;
+                height: 50px;
+                border-radius: 16px;
+                box-shadow: 0 14px 28px rgba(12, 53, 25, 0.32);
+                position: relative;
+                z-index: 1;
+            }
+
             .logo-title {
-                font-size: 1.08em;
+                font-size: 1.12em;
                 flex-direction: row;
                 align-items: center;
-                justify-content: center;
-                gap: 8px;
+                gap: 6px;
                 line-height: 1.08;
-                padding: 6px 14px;
-                border-radius: 999px;
-                background: linear-gradient(135deg, rgba(12, 53, 25, 0.45), rgba(12, 53, 25, 0.2));
-                border: 1px solid rgba(255, 255, 255, 0.16);
-                box-shadow: 0 18px 30px rgba(12, 53, 25, 0.28);
-                backdrop-filter: blur(8px);
+                padding: 0;
+                border-radius: 0;
+                background: transparent;
+                border: none;
+                box-shadow: none;
+                backdrop-filter: none;
+            }
+
+            .logo-wordmark {
+                position: relative;
+                z-index: 1;
+            }
+
+            header.scrolled .logo {
+                background: linear-gradient(135deg, rgba(46, 125, 50, 0.15), rgba(46, 125, 50, 0.03));
+                box-shadow: 0 18px 30px rgba(23, 61, 32, 0.18);
+            }
+
+            header.scrolled .logo::before {
+                background: linear-gradient(130deg, rgba(46, 125, 50, 0.22), rgba(255, 255, 255, 0));
+                opacity: 0.75;
             }
 
             .logo-title-text,
             .logo-title .highlight {
                 display: inline-flex;
                 align-items: center;
-                padding: 4px 10px;
-                border-radius: 999px;
-                text-transform: uppercase;
-                letter-spacing: 0.08em;
-                font-weight: 600;
-            }
-
-            .logo-title-text {
-                color: rgba(255, 255, 255, 0.92);
-                background: linear-gradient(135deg, rgba(255, 255, 255, 0.22), rgba(255, 255, 255, 0.05));
-                box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.35);
+                padding: 0;
+                border-radius: 0;
+                text-transform: none;
+                letter-spacing: 0.02em;
+                font-weight: 700;
             }
 
             .logo-title .highlight {
-                color: #1b5e20;
-                background: linear-gradient(135deg, rgba(255, 224, 130, 0.95), rgba(255, 152, 0, 0.9));
-                box-shadow: 0 10px 22px rgba(255, 152, 0, 0.38);
+                color: #ffe082;
             }
 
             .logo-title .highlight::after {
-                display: none;
+                bottom: -6px;
+                height: 3px;
             }
 
             .logo-eyebrow {
@@ -2973,7 +3014,7 @@
 
             nav {
                 position: fixed;
-                top: 80px;
+                top: 76px;
                 left: -100%;
                 width: 100%;
                 background: linear-gradient(135deg, rgba(46, 125, 50, 0.95), rgba(26, 94, 32, 0.92));
@@ -3059,15 +3100,22 @@
                 display: none;
             }
 
+            .logo {
+                padding: 8px 14px;
+            }
+
+            .logo-icon {
+                width: 46px;
+                height: 46px;
+            }
+
             .logo-title {
-                font-size: 1em;
-                padding: 5px 12px;
+                font-size: 1.04em;
             }
 
             .logo-title-text,
             .logo-title .highlight {
-                letter-spacing: 0.07em;
-                padding: 3px 9px;
+                letter-spacing: 0.04em;
             }
 
             .logo-tagline {
