Hide booking info panel on mobile

--- a/index.html
+++ b/index.html
@@ -3121,6 +3121,10 @@
             .logo-tagline {
                 display: none;
             }
+
+            .booking-info {
+                display: none;
+            }
         }
 
         @media (max-width: 576px) {
